# Mirofish

./: .env.example  .gitignore  start.bat  use_cases.md
.claude/: settings.local.json
Miro_GPT/: .gitignore  README.md
Miro_GPT/backend/: .env.example  README.md  pyproject.toml
Miro_GPT/backend/src/backend/: app.py  config.py  db.py
Miro_GPT/backend/src/backend/api/: projects.py  reports.py  simulations.py  tasks.py
Miro_GPT/backend/src/backend/models/: db_models.py  schemas.py
Miro_GPT/backend/src/backend/services/: llm_service.py  ontology_service.py  project_service.py  report_service.py  simulation_service.py  task_service.py  zep_graph_service.py
Miro_GPT/backend/src/backend/subagents/: critic.py  research.py  sim.py  writer.py
Miro_GPT/backend/src/backend/utils/: file_parser.py  id_factory.py  json_tools.py  logger.py  zep_utils.py
Miro_GPT/backend/tests/: test_simulation_logic.py
Miro_GPT/frontend/: package-lock.json  package.json  tsconfig.json
Miro_GPT/frontend/src/: App.vue  router.ts  style.css  types.ts
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/models/: database.py  schemas.py
backend/app/services/: agent_generator.py  document_processor.py  entity_extractor.py  knowledge_graph.py  memory_manager.py  report_generator.py  simulation_engine.py
backend/app/utils/: llm_client.py  logger.py
frontend/: index.html  package-lock.json  package.json  vite.config.js.timestamp-1774120793639-e0b4248831488.mjs
frontend/src/: App.vue
(+26 files in other folders)
